# weather

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
source/: __init__.py  cli.py  client.py
