[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather"
version = "0.1.0"
description = "CLI tool for current weather conditions via wttr.in"
requires-python = ">=3.9"
dependencies = ["requests>=2.28.0", "urllib3<2"]

[project.scripts]
weather = "source.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["source*"]
